--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@aws-sdk/client-s3": "^3.921.0",
     "@aws-sdk/s3-presigned-post": "^3.921.0",
     "@stripe/stripe-js": "^8.2.0",
+    "animejs": "^4.2.2",
     "next": "16.0.1",
     "next-auth": "^5.0.0-beta.30",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "stripe": "^19.2.0",
+    "three": "^0.180.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
